k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: javawebapp-svc
  namespace: test-ns
spec:
  type: ClusterIP
  selector:
    app: javawebapp
  ports:
  - port: 80
    targetPort: 8080
